# poisson_caustic_design

./: .gitignore  CMakeLists.txt  LICENSE  README.md  costFunctor.h  index.js  main.cpp  mainwindow.cpp  mainwindow.ui  package-lock.json  package.json
src/: bvh.cpp  bvh.h  caustic_design.cpp  caustic_design.h  costFunctor.h  height_solver.c  height_solver.h  main.cpp  mesh.cpp  mesh.h  normal_integration.cpp  normal_integration.h  polygon_utils.cpp  polygon_utils.h  solver.cpp  solver.h  utils.cpp  utils.h
